# macos-experiments

./: CMakeLists.txt  Makefile  README.md  main.c  main.cpp  mylib.cpp  mylib.hpp  openssl_options.txt
.github/workflows/: abismal_macos_test.yml  abismal_release_macos.yml  brew_tests  brew_tests.yml  build-ncurses.yml  build-openssl.yml  build-with-r-conda.yml  build-with-r.yml  cmake_lipo.yml  install-pyxfr.yml  libdeflate_static.yml  linux-release-abismal.yml  mactex.yml  main.yml  main2.yml  main4.yml  new_Rxfr_test.yml  original-build-with-r.yml  reuse-artifacts.yml  rxfr_macos_tests.yml  test-lipo.yml  test-pypi-pyxfr.yml
